<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dawdler-train</groupId>
	<artifactId>dawdler-train</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dawdler.build.version>0.0.2-RELEASES</dawdler.build.version>
		<project.version>0.0.1-SNAPSHOT</project.version>
	</properties>
	
	<dependencyManagement>
	<dependencies>
	<dependency>
			<groupId>dawdler-train</groupId>
			<artifactId>user-api</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
	</dependencyManagement>
	<modules>
		<module>api</module>
		<module>load-web</module>
		<module>service</module>
		<module>web-api</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>17</source>
					<target>17</target>
					<!--debug>true</debug>-->
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.client.plug</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>
			<plugin>
				<!-- -N versions:update-child-modules -->
				<!--mvn versions:set -DnewVersion=0.0.3-RELEASES-->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
		</plugins>
		<defaultGoal>compile</defaultGoal>
	</build>
</project>